<?xml version="1.0" encoding="utf-8"?><!--这个是协调布局-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroup_color"
    android:fitsSystemWindows="true"
 >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/y10"
            app:cardElevation="@dimen/y10"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="@dimen/y40"
            tools:layout_editor_absoluteX="10dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_num"
                    style="@style/order_im"
                    android:background="@mipmap/icon_oder"
                    app:layout_constraintBottom_toBottomOf="@id/order_number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/order_number" />

                <TextView
                    android:id="@+id/order_number"
                    style="@style/EditText_fankui.title"
                    app:layout_constraintLeft_toRightOf="@id/iv_num"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/order_status"
                    style="@style/EditText_fankui.title"
                    android:layout_marginRight="@dimen/x20"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/v_cut_of"
                    style="@style/view"
                    android:layout_marginTop="@dimen/y30"
                    app:layout_constraintTop_toBottomOf="@id/order_number"></View>

                <ImageView
                    android:id="@+id/iv_order_send"
                    style="@style/order_im"
                    android:background="@mipmap/icon_order_send"
                    app:layout_constraintBottom_toBottomOf="@id/send"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/send" />

                <TextView
                    android:id="@+id/send"
                    style="@style/EditText_fankui.title"
                    android:layout_marginTop="@dimen/y45"
                    android:maxLines="2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/iv_order_send"
                    app:layout_constraintTop_toBottomOf="@+id/v_cut_of" />

                <TextView
                    android:id="@+id/send_name_tel"
                    style="@style/fuzhu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y26"
                    android:maxLines="2"
                    android:paddingRight="10dp"
                    app:layout_constraintLeft_toLeftOf="@id/send"
                    app:layout_constraintTop_toBottomOf="@id/send" />

                <ImageView
                    android:id="@+id/iv_order_re"
                    style="@style/order_im"
                    android:background="@mipmap/icon_order_receive"
                    app:layout_constraintBottom_toBottomOf="@id/tv_re"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_re" />

                <TextView
                    android:id="@+id/tv_re"
                    style="@style/EditText_fankui.title"
                    android:maxLines="2"
                    android:paddingRight="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/iv_order_re"
                    app:layout_constraintTop_toBottomOf="@+id/send_name_tel" />

                <TextView
                    android:id="@+id/tv_re_name"
                    style="@style/fuzhu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y26"
                    tools:text="曹臻睿 15870617281"
                    app:layout_constraintLeft_toLeftOf="@id/tv_re"
                    app:layout_constraintTop_toBottomOf="@id/tv_re" />

                <View
                    android:id="@+id/v_cut_of_2"
                    style="@style/view"
                    android:layout_marginTop="@dimen/y44"
                    app:layout_constraintTop_toBottomOf="@id/tv_re_name" />

                <TextView
                    android:id="@+id/textView1"
                    style="@style/EditText_fankui.title"
                    android:layout_marginTop="@dimen/y50"
                    android:text="@string/order_details_time"
                    android:textColor="@color/fuzhu_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_cut_of_2" />

                <TextView
                    android:id="@+id/order_time"
                    style="@style/EditText_fankui.text"
                    tools:text="dasdadasdasd"
                    app:layout_constraintLeft_toRightOf="@id/textView1"
                    app:layout_constraintTop_toTopOf="@id/textView1" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/EditText_fankui.title"
                    android:text="@string/order_details_money"
                    android:textColor="@color/fuzhu_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView1" />

                <TextView
                    android:id="@+id/order_money"
                    style="@style/EditText_fankui.text"
                    tools:text="dasdadasdasd"
                    app:layout_constraintLeft_toRightOf="@id/textView2"
                    app:layout_constraintTop_toTopOf="@id/textView2" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/EditText_fankui.title"
                    android:text="@string/order_details_class"
                    android:textColor="@color/fuzhu_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <TextView
                    android:id="@+id/order_class"
                    style="@style/EditText_fankui.text"
                    tools:text="dasdadasdasd"
                    app:layout_constraintLeft_toRightOf="@id/textView3"
                    app:layout_constraintTop_toTopOf="@id/textView3" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/EditText_fankui.title"
                    android:text="@string/order_details_class_money"
                    android:textColor="@color/fuzhu_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

                <TextView
                    android:id="@+id/order_class_money"
                    style="@style/EditText_fankui.text"
                    tools:text="dasdadasdasd"
                    app:layout_constraintLeft_toRightOf="@id/textView4"
                    app:layout_constraintTop_toTopOf="@id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/EditText_fankui.title"
                    android:text="@string/order_details_insured"
                    android:textColor="@color/fuzhu_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4" />

                <TextView
                    android:id="@+id/order_details_insured"
                    style="@style/EditText_fankui.text"
                    tools:text="dasdadasdasd"
                    app:layout_constraintLeft_toRightOf="@id/textView5"
                    app:layout_constraintTop_toTopOf="@id/textView5" />

                <View
                    android:id="@+id/v_cut_of2"
                    style="@style/view"
                    android:layout_marginTop="@dimen/y44"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/order_details_insured"></View>

                <TextView
                    android:id="@+id/textView6"
                    style="@style/EditText_fankui.title"
                    android:layout_marginTop="@dimen/y50"
                    android:text="@string/order_details_cancel_people"
                    android:textColor="@color/fuzhu_text_color"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_cut_of2" />

                <TextView
                    android:id="@+id/order_details_cancel_people"
                    style="@style/EditText_fankui.text"
                    tools:text="dasdadasdasd"
                    android:visibility="gone"
                    app:layout_constraintLeft_toRightOf="@id/textView6"
                    app:layout_constraintTop_toTopOf="@id/textView6" />


                <TextView
                    android:id="@+id/textView7"
                    style="@style/EditText_fankui.title"
                    android:text="@string/order_details_cancle_reason"
                    android:textColor="@color/fuzhu_text_color"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView6" />

                <TextView
                    android:id="@+id/order_details_cancel_reason"
                    style="@style/EditText_fankui.text"
                    tools:text="dasdadasdasd"
                    android:visibility="gone"
                    app:layout_constraintLeft_toRightOf="@id/textView7"
                    app:layout_constraintTop_toTopOf="@id/textView7" />

                <TextView
                    android:id="@+id/order_details_cancel_reason1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x20"
                    android:layout_marginRight="@dimen/x20"
                    android:layout_marginTop="@dimen/y30"
                    android:background="@color/backgroup_color"
                    android:minLines="2"
                    android:padding="@dimen/x10"
                    android:singleLine="false"
                    tools:text="213213123123123123123123"
                    android:textColor="@color/fuzhu_text_color"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView7" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
