<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="@dimen/x412"
        android:layout_height="@dimen/y110"
        android:background="@mipmap/dlm_logo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/y210"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:id="@+id/imageView2" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="11"
        android:numeric="integer"
        android:background="@null"
        android:textColor="#999999"
        android:textSize= "14sp"
        android:hint="@string/login_phone_hint"
        android:layout_marginTop="@dimen/y160"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:id="@+id/et_number"

        app:layout_constraintRight_toRightOf="@+id/view"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="@dimen/x20" />
    <View
        android:layout_width="@dimen/x600"
        android:layout_height="@dimen/y1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:background="#eaeaea"
        app:layout_constraintTop_toBottomOf="@+id/et_number"
        android:id="@+id/view">

    </View>
    <ImageView
        android:layout_width="@dimen/x44"
        android:layout_height="@dimen/x44"
        android:background="@mipmap/ic_back_number"
        android:layout_marginLeft="@dimen/x30"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        android:id="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        android:layout_marginBottom="@dimen/y23"
        app:layout_constraintTop_toTopOf="@+id/et_number"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/et_yanzhengma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:hint="@string/login_yanzhengma"
        android:maxLength="6"
        android:numeric="integer"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/tv_getyanzhengma"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.515" />

    <ImageView
        android:layout_width="@dimen/x44"
        android:layout_height="@dimen/x44"
        android:background="@mipmap/ic_yaoshi"
        android:id="@+id/imageView4"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_marginLeft="@dimen/x30"
        app:layout_constraintLeft_toLeftOf="@+id/view2"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        android:layout_marginBottom="@dimen/y23" />

    <View
        android:layout_width="@dimen/x600"
        android:layout_height="@dimen/y1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/y147"
        android:background="#eaeaea"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:id="@+id/view2">

    </View>

    <TextView
        android:id="@+id/tv_getyanzhengma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_getyanzhengma"
        android:maxLines="1"
        android:textSize="14sp"
        android:textColor="#f08200"
        android:layout_marginRight="14dp"
        app:layout_constraintRight_toRightOf="@+id/view2"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_yanzhengma" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登陆"
        android:textColor="#ffffff"
        android:background="@mipmap/bg_bt_login"
        android:layout_marginTop="@dimen/y80"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />
</android.support.constraint.ConstraintLayout>
