<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/y10"
        app:contentPaddingBottom="@dimen/y40"
        app:cardCornerRadius="@dimen/y10"
        app:cardUseCompatPadding="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_num"
                android:background="@mipmap/icon_oder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/order_number"
                app:layout_constraintBottom_toBottomOf="@id/order_number"
                style="@style/order_im" />
            <TextView
                android:id="@+id/order_number"
                style="@style/EditText_fankui.title"
                android:text="订单编号xxxxxxxxxxx"
                app:layout_constraintLeft_toRightOf="@id/iv_num"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_cut_of"
                app:layout_constraintTop_toBottomOf="@id/order_number"
                style="@style/view"></View>

            <ImageView
                style="@style/order_im"
                android:id="@+id/iv_order_send"
                android:background="@mipmap/icon_order_send"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/send"
                app:layout_constraintBottom_toBottomOf="@id/send"
                />

            <TextView
                android:id="@+id/send"
                style="@style/EditText_fankui.title"
                android:layout_marginTop="@dimen/y45"
                android:text="上海市名航路xxx11111好"
                app:layout_constraintLeft_toRightOf="@id/iv_order_send"
                app:layout_constraintTop_toBottomOf="@+id/v_cut_of" />

            <TextView
                android:id="@+id/send_name_tel"
                style="@style/fuzhu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y26"
                android:text="曹臻睿 15870617281"
                app:layout_constraintLeft_toLeftOf="@id/send"
                app:layout_constraintTop_toBottomOf="@id/send" />

            <ImageView
               style="@style/order_im"
                android:id="@+id/iv_order_re"
                android:background="@mipmap/icon_order_receive"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_re"
                app:layout_constraintBottom_toBottomOf="@id/tv_re"/>

            <TextView
                android:id="@+id/tv_re"
                style="@style/EditText_fankui.title"
                android:text="上海市名航路xxx11111好"
                app:layout_constraintLeft_toRightOf="@id/iv_order_re"
                app:layout_constraintTop_toBottomOf="@+id/send_name_tel" />

            <TextView
                android:id="@+id/tv_re_name"
                style="@style/fuzhu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y26"
                android:text="曹臻睿 15870617281"
                app:layout_constraintLeft_toLeftOf="@id/tv_re"
                app:layout_constraintTop_toBottomOf="@id/tv_re" />
            <View
               style="@style/view"
                android:id="@+id/v_cut_of_2"
                app:layout_constraintTop_toBottomOf="@id/tv_re_name"
                android:layout_marginTop="@dimen/y44"
                />

            <TextView
                android:id="@+id/textView1"
                style="@style/EditText_fankui.title"
                android:text="@string/order_details_time"
                android:textColor="@color/fuzhu_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toBottomOf="@id/v_cut_of_2"
                android:layout_marginTop="@dimen/y50"/>

            <TextView
                android:id="@+id/order_time"
                style="@style/EditText_fankui.text"
                android:text="dasdadasdasd"
                app:layout_constraintLeft_toRightOf="@id/textView1"
                app:layout_constraintTop_toTopOf="@id/textView1" />

            <TextView
                android:id="@+id/textView2"
                style="@style/EditText_fankui.title"
                android:text="@string/order_details_class_money"
                android:textColor="@color/fuzhu_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1"
             />

            <TextView
                android:id="@+id/order_money"
                style="@style/EditText_fankui.text"
                android:text="dasdadasdasd"
                app:layout_constraintLeft_toRightOf="@id/textView2"
                app:layout_constraintTop_toTopOf="@id/textView2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/EditText_fankui.title"
                android:text="@string/order_details_class"
                android:textColor="@color/fuzhu_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                />

            <TextView
                android:id="@+id/order_class"
                style="@style/EditText_fankui.text"
                android:text="dasdadasdasd"
                app:layout_constraintLeft_toRightOf="@id/textView3"
                app:layout_constraintTop_toTopOf="@id/textView3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/EditText_fankui.title"
                android:text="@string/order_details_class_money"
                android:textColor="@color/fuzhu_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                />

            <TextView
                android:id="@+id/order_class_money"
                style="@style/EditText_fankui.text"
                android:text="dasdadasdasd"
                app:layout_constraintLeft_toRightOf="@id/textView4"
                app:layout_constraintTop_toTopOf="@id/textView4" />

            <TextView
                android:id="@+id/textView5"
                style="@style/EditText_fankui.title"
                android:text="@string/order_details_insured"
                android:textColor="@color/fuzhu_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4"
                />

            <TextView
                android:id="@+id/order_details_insured"
                style="@style/EditText_fankui.text"
                android:text="dasdadasdasd"
                app:layout_constraintLeft_toRightOf="@id/textView5"
                app:layout_constraintTop_toTopOf="@id/textView5" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
